fix menu en movil collapse

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -90,7 +90,7 @@
   }
 
   .sidenav {
-    width: 100% !important;
+    width: 90% !important;
   }
 }
 
